--- a/react/src/index.css
+++ b/react/src/index.css
@@ -2,10 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-#NavbarContainer {
-  background-color: red;
+html {
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
 }
 
-#MainContainer {
-  background-color: red;
+body {
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
 }
