--- a/react/src/index.css
+++ b/react/src/index.css
@@ -4,12 +4,27 @@
 
 html {
   margin: 0;
-  height: 100vh;
-  width: 100vw;
 }
 
 body {
   margin: 0;
-  height: 100vh;
-  width: 100vw;
+}
+
+#HeaderContainer {
+  background-color: #313234;
+  color: #e1e1e1;
+  height: 50px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+#MainContainer {
+  background-color: #363f52;
+  color:#e1e1e1;
+  margin-top: 50px;
+  height: calc(100vh - 50px);
+  width: 100%;
+  overflow: auto;
 }
